welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:14: error: type mismatch;
 found   : Int
 required: Boolean
		if ( caseOrange)
                     ^